--- a/config/content.htm
+++ b/config/content.htm
@@ -22,3 +22,4 @@
 <p>電腦輔助設計實習課程教材:&nbsp;<a href="http://mde.tw/cadp2018/content/">http://mde.tw/cadp2018/content/</a>&nbsp;</p>
 <h1>Fusion 360</h1>
 <p><a href="https://www.autodesk.com/products/fusion-360/students-teachers-educators">https://www.autodesk.com/products/fusion-360/students-teachers-educators</a>&nbsp;</p>
+<p><img src="https://photo.16pic.com/00/34/48/16pic_3448595_b.jpg" width="500" height="700" alt=""></p>
