--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,9 +39,9 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## 2018Fall 分組網際簡報
+## 2018Fall 
 
-### 虎科大機械設計工程系
+### s40723114 個人簡報
 
 <small>
 Created by [KMOLab](http://lab.kmol.info/)
