--- a/config/content.htm
+++ b/config/content.htm
@@ -12,8 +12,10 @@
 <p>從近端git clone遠端網址,在從近端改版,接著git add,commit,push,上去遠端</p>
 <p><iframe width="560" height="314" src="//www.youtube.com/embed/U2_baVoCSx0" allowfullscreen="allowfullscreen"></iframe></p><h2>Week2</h2>
 <h4 class="title style-scope ytd-video-primary-info-renderer"><yt-formatted-string class="style-scope ytd-video-primary-info-renderer">說明如何以 ShareX 取圖, 如何管理 CMSimfly 作業倉儲.</yt-formatted-string></h4>
-<p><iframe width="560" height="314" src="//www.youtube.com/embed/U2_baVoCSx0" allowfullscreen="allowfullscreen"></iframe></p><h2>Week3</h2>
-<h2>Week4</h2><p>簡報更改標題如下:</p><p></p><p><iframe width="560" height="314" src="//www.youtube.com/embed/oOio62DIXDY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week5</h2>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/U2_baVoCSx0" allowfullscreen="allowfullscreen"></iframe></p><h2>Week3</h2><p>學習使用git log,git log --oneline -- graph -- all 等指令</p><p></p><p><iframe width="560" height="314" src="//www.youtube.com/embed/NH0OS1TKZqM?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week4</h2>
+<p>簡報更改標題如下:</p>
+<p></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/oOio62DIXDY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week5</h2>
 <h2>Week6</h2>
 <h2>Week7</h2><h1>Python 手冊</h1>
 <p>計算機程式教材:&nbsp;&nbsp;<a href="http://mde.tw/cp2018/content/">http://mde.tw/cp2018/content/</a>&nbsp;</p>
