--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,6 @@
-<h1>簡介</h1><p>2018 Fall 計算機程式與電腦輔助設計實習課程分組網站.</p><h2>CMSimfly 網站</h2>
+<h1>簡介</h1>
+<p>2018 Fall 計算機程式與電腦輔助設計實習課程分組網站.</p>
+<h2>CMSimfly 網站</h2>
 <p>各組必須自行更改 Config 中的網站標題, 且每次完成近端動態網頁編輯後, 以 generate_pages 按鈕, 將動態網頁資料轉為靜態網頁資料, 之後再新增、提交並推送到遠端倉儲.</p>
 <h2>reveal 投影片</h2>
 <p>以 <a href="http://www.leoeditor.com/">Leo Editor</a> 開啟 config/reveal.leo</p>
@@ -8,16 +10,26 @@
 <p>更改 @edit publishconf.py 中的 SITEURL</p>
 <p></p>
 <h1>組員操作影片</h1>
-<p>每週各分組組員必須將參與分組協同過程之電腦操作流程錄成影片後, 上傳至各自的 Youtube 帳號區, 並嵌入各分組網站頁面中.</p><h2>Week1</h2>
+<p>每週各分組組員必須將參與分組協同過程之電腦操作流程錄成影片後, 上傳至各自的 Youtube 帳號區, 並嵌入各分組網站頁面中.</p>
+<h2>Week1</h2>
 <p>從近端git clone遠端網址,在從近端改版,接著git add,commit,push,上去遠端</p>
-<p><iframe width="560" height="314" src="//www.youtube.com/embed/U2_baVoCSx0" allowfullscreen="allowfullscreen"></iframe></p><h2>Week2</h2>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/U2_baVoCSx0" allowfullscreen="allowfullscreen"></iframe></p>
+<h2>Week2</h2>
 <h4 class="title style-scope ytd-video-primary-info-renderer"><yt-formatted-string class="style-scope ytd-video-primary-info-renderer">說明如何以 ShareX 取圖, 如何管理 CMSimfly 作業倉儲.</yt-formatted-string></h4>
-<p><iframe width="560" height="314" src="//www.youtube.com/embed/U2_baVoCSx0" allowfullscreen="allowfullscreen"></iframe></p><h2>Week3</h2><p>學習使用git log,git log --oneline -- graph -- all 等指令</p><p></p><p><iframe width="560" height="314" src="//www.youtube.com/embed/NH0OS1TKZqM?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week4</h2>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/U2_baVoCSx0" allowfullscreen="allowfullscreen"></iframe></p>
+<h2>Week3</h2>
+<p>學習使用git log,git log --oneline -- graph -- all 等指令</p>
+<p></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/NH0OS1TKZqM?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p>
+<h2>Week4</h2>
 <p>簡報更改標題如下:</p>
 <p></p>
-<p><iframe width="560" height="314" src="//www.youtube.com/embed/oOio62DIXDY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week5</h2>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/oOio62DIXDY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p>
+<h2>Week5</h2>
 <h2>Week6</h2>
-<h2>Week7</h2><h1>Python 手冊</h1>
+<h2>Week7</h2>
+<h1>GIT 基本指令</h1><h4>cd..&nbsp; 進入文件資料夾</h4><h4>git add .&nbsp; 暫存</h4><h4>git commit -m "&nbsp; "&nbsp; 把暫存區提到git分支上</h4><h4>git status 查看git目前狀態</h4><h4>git log 查看提交的日誌</h4><h4>git clone <a href="http://..">http://..</a>.&nbsp; 將遠端網站clone下來</h4><h4>git branch 查看當前分支</h4><h4>git branch name 創建分支</h4><h4>git checkout name 切換分支</h4><h4>git push 將近端所儲存的東西推上遠端</h4><h4>python&nbsp; &nbsp;wsgi.py&nbsp; &nbsp; 啟動網站</h4><h4>git pull&nbsp; 合併所有</h4><h4>git log -- oneline -- graph -- all&nbsp; 查看日誌當前所提交的唯一行圖形</h4><h4>git version 檢查版本</h4><h4></h4><h1>Python 手冊</h1>
+<p></p>
 <p>計算機程式教材:&nbsp;&nbsp;<a href="http://mde.tw/cp2018/content/">http://mde.tw/cp2018/content/</a>&nbsp;</p>
 <p>可攜程式下載: <a href="https://drive.google.com/file/d/1DWtyoUhl8CycKJ8uulB3viRXE39KqpE1/view?usp=sharing">p37.7z</a></p>
 <h1>OnShape 手冊</h1>
