--- a/content/GIT 基本指令.html
+++ b/content/GIT 基本指令.html
@@ -61,5 +61,19 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='組員操作影片.html'>組員操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a></li></ul><li><a href='GIT 基本指令.html'>GIT 基本指令</a><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>Week6 << <a href='Week6.html'>Previous</a> <a href='GIT 基本指令.html'>Next</a> >> GIT 基本指令<br /><h1>Week7</h1>
-<br />Week6 << <a href='Week6.html'>Previous</a> <a href='GIT 基本指令.html'>Next</a> >> GIT 基本指令</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='組員操作影片.html'>組員操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a></li></ul><li><a href='GIT 基本指令.html'>GIT 基本指令</a><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>Week7 << <a href='Week7.html'>Previous</a> <a href='Python 手冊.html'>Next</a> >> Python 手冊<br /><h1>GIT 基本指令</h1>
+<h4>cd..&nbsp; 進入文件資料夾</h4>
+<h4>git add .&nbsp; 暫存</h4>
+<h4>git commit -m "&nbsp; "&nbsp; 把暫存區提到git分支上</h4>
+<h4>git status 查看git目前狀態</h4>
+<h4>git log 查看提交的日誌</h4>
+<h4>git clone <a href="http://..">http://..</a>.&nbsp; 將遠端網站clone下來</h4>
+<h4>git branch 查看當前分支</h4>
+<h4>git branch name 創建分支</h4>
+<h4>git checkout name 切換分支</h4>
+<h4>git push 將近端所儲存的東西推上遠端</h4>
+<h4>python&nbsp; &nbsp;wsgi.py&nbsp; &nbsp; 啟動網站</h4>
+<h4>git pull&nbsp; 合併所有</h4>
+<h4>git log -- oneline -- graph -- all&nbsp; 查看日誌當前所提交的唯一行圖形</h4>
+<h4>git version 檢查版本</h4>
+<h4></h4><br />Week7 << <a href='Week7.html'>Previous</a> <a href='Python 手冊.html'>Next</a> >> Python 手冊</section></div></body></html>
