--- a/config/content.htm
+++ b/config/content.htm
@@ -25,10 +25,24 @@
 <p>簡報更改標題如下:</p>
 <p></p>
 <p><iframe width="560" height="314" src="//www.youtube.com/embed/oOio62DIXDY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p>
-<h2>Week5</h2>
-<h2>Week6</h2>
+<h2>Week5</h2><h4>如何更改blog標題</h4><p></p><p><iframe width="560" height="314" src="//www.youtube.com/embed/rUX3bSHikvY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week6</h2>
 <h2>Week7</h2>
-<h1>GIT 基本指令</h1><h4>cd..&nbsp; 進入文件資料夾</h4><h4>git add .&nbsp; 暫存</h4><h4>git commit -m "&nbsp; "&nbsp; 把暫存區提到git分支上</h4><h4>git status 查看git目前狀態</h4><h4>git log 查看提交的日誌</h4><h4>git clone <a href="http://..">http://..</a>.&nbsp; 將遠端網站clone下來</h4><h4>git branch 查看當前分支</h4><h4>git branch name 創建分支</h4><h4>git checkout name 切換分支</h4><h4>git push 將近端所儲存的東西推上遠端</h4><h4>python&nbsp; &nbsp;wsgi.py&nbsp; &nbsp; 啟動網站</h4><h4>git pull&nbsp; 合併所有</h4><h4>git log -- oneline -- graph -- all&nbsp; 查看日誌當前所提交的唯一行圖形</h4><h4>git version 檢查版本</h4><h4></h4><h1>Python 手冊</h1>
+<h1>GIT 基本指令</h1>
+<h4>cd..&nbsp; 進入文件資料夾</h4>
+<h4>git add .&nbsp; 暫存</h4>
+<h4>git commit -m "&nbsp; "&nbsp; 把暫存區提到git分支上</h4>
+<h4>git status 查看git目前狀態</h4>
+<h4>git log 查看提交的日誌</h4>
+<h4>git clone <a href="http://..">http://..</a>.&nbsp; 將遠端網站clone下來</h4>
+<h4>git branch 查看當前分支</h4>
+<h4>git branch name 創建分支</h4>
+<h4>git checkout name 切換分支</h4>
+<h4>git push 將近端所儲存的東西推上遠端</h4>
+<h4>python&nbsp; &nbsp;wsgi.py&nbsp; &nbsp; 啟動網站</h4>
+<h4>git pull&nbsp; 合併所有</h4>
+<h4>git log -- oneline -- graph -- all&nbsp; 查看日誌當前所提交的唯一行圖形</h4>
+<h4>git version 檢查版本</h4>
+<h4></h4><h1>Python 手冊</h1>
 <p></p>
 <p>計算機程式教材:&nbsp;&nbsp;<a href="http://mde.tw/cp2018/content/">http://mde.tw/cp2018/content/</a>&nbsp;</p>
 <p>可攜程式下載: <a href="https://drive.google.com/file/d/1DWtyoUhl8CycKJ8uulB3viRXE39KqpE1/view?usp=sharing">p37.7z</a></p>
