--- a/reveal/index.html
+++ b/reveal/index.html
@@ -75,6 +75,60 @@ Created by [KMOLab](http://lab.kmol.info/)
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
+#week1
+
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U2_baVoCSx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+#week2
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U2_baVoCSx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+#week3
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NH0OS1TKZqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+#week4
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oOio62DIXDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+#week5
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rUX3bSHikvY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </script>
+</section>
+
+</section>
+<section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
 # 數學符號與方程式
 
 Inline math equations go in like so: $\omega = d\phi / dt$. Display
