--- a/config/content.htm
+++ b/config/content.htm
@@ -25,8 +25,10 @@
 <p>簡報更改標題如下:</p>
 <p></p>
 <p><iframe width="560" height="314" src="//www.youtube.com/embed/oOio62DIXDY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p>
-<h2>Week5</h2><h4>如何更改blog標題</h4><p></p><p><iframe width="560" height="314" src="//www.youtube.com/embed/rUX3bSHikvY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week6</h2>
-<h2>Week7</h2>
+<h2>Week5</h2>
+<h4>如何更改blog標題</h4>
+<p></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/rUX3bSHikvY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week6</h2><h4>如何在Reveal內新增自己作業影片</h4><p></p><p><iframe width="560" height="314" src="//www.youtube.com/embed/Zz5kaYz7Fj0?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week7</h2>
 <h1>GIT 基本指令</h1>
 <h4>cd..&nbsp; 進入文件資料夾</h4>
 <h4>git add .&nbsp; 暫存</h4>
