--- a/config/content.htm
+++ b/config/content.htm
@@ -28,8 +28,10 @@
 <h2>Week5</h2>
 <h4>如何更改blog標題</h4>
 <p></p>
-<p><iframe width="560" height="314" src="//www.youtube.com/embed/rUX3bSHikvY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week6</h2><h4>如何在Reveal內新增自己作業影片</h4><p></p><p><iframe width="560" height="314" src="//www.youtube.com/embed/Zz5kaYz7Fj0?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week7</h2>
-<h1>GIT 基本指令</h1>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/rUX3bSHikvY?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week6</h2>
+<h4>如何在Reveal內新增自己作業影片</h4>
+<p></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/Zz5kaYz7Fj0?feature=youtu" allowfullscreen="allowfullscreen"></iframe></p><h2>Week7</h2><h4>如何更改blog的圖片</h4><p></p><p><iframe width="560" height="314" src="//www.youtube.com/embed/gw9hNSgn-DQ" allowfullscreen="allowfullscreen"></iframe></p><p></p><p></p><h1>GIT 基本指令</h1>
 <h4>cd..&nbsp; 進入文件資料夾</h4>
 <h4>git add .&nbsp; 暫存</h4>
 <h4>git commit -m "&nbsp; "&nbsp; 把暫存區提到git分支上</h4>
